# CS8

CS8_NQueensRecursive/: CMakeLists.txt  QueensRecursive.cpp  QueensRecursive.h  main.cpp
DropShadow/: CMakeLists.txt  Font.cpp  Font.h  dropShadow.cpp  dropShadow.h  main.cpp
DropdownMenu/: CMakeLists.txt  Fonts.cpp  Fonts.h  List.cpp  List.h  ListItem.cpp  ListItem.h  Menu.cpp  Menu.h  MouseEvents.cpp  Position.h  States.cpp  States.h  inputBox.cpp  inputBox.h  main.cpp  statesEnum.h
MenuBar/: CMakeLists.txt  List.cpp  ListItem.cpp  Menu.cpp  Menu.h  MenuBar.cpp  MenuBar.h  MouseEvents.h  Position.cpp  fontsEnum.h  main.cpp
MultiText/: CMakeLists.txt  Font.cpp  Font.h  Letter.cpp  Letter.h  MultiText.cpp  MultiText.h  main.cpp
MusicPlayerTest/: Button.cpp  Button.h  CMakeLists.txt  Cursor.cpp  Cursor.h  Font.cpp  Font.h  Helper.cpp  Helper.h  Letter.cpp  Letter.h  List.cpp  List.h  ListItem.cpp  ListItem.h  MainSongBox.cpp  MainSongBox.h  Menu.cpp  Menu.h  MenuBar.cpp  MenuBar.h  MouseEvents.cpp  MouseEvents.h  MusicPlayer.cpp  MusicPlayer.h  Position.cpp  Position.h  SongCard.cpp  SongCard.h  SongCardList.cpp  SongCardList.h  SongCreator.cpp  SongCreator.h  States.cpp  States.h  Textbox.cpp  Textbox.h  Texture.cpp  Texture.h  TextureEnums.h  (+9 more)
TypingInSFML/: CMakeLists.txt  Font.cpp  Font.h  Typing.cpp  Typing.h  main.cpp
autocorrect_heapsort/: Application.cpp  Application.h  CMakeLists.txt  FileReader.cpp  FileReader.h  Heap.cpp  Heap.h  ImageRotation.cpp  MouseEvents.cpp  MouseEvents.h  States.cpp  States.h  StatesEnum.h  Suggester.cpp  Suggester.h  Textbox.h  Typing.cpp  TypingInput.cpp  TypingInput.h  Word.cpp  Word.h  WordSuggestion.cpp  WordSuggestion.h  main.cpp
binarySearchTree/: A.cpp  A.h  BinaryTree.cpp  BinaryTree.h  CMakeLists.txt  Node.h  main.cpp
calculator/: Application.cpp  Application.h  CMakeLists.txt  CalcButton.cpp  CalcButton.h  CalcScreen.cpp  CalcScreen.h  Calculator.cpp  Calculator.h  Font.cpp  Font.h  Helper.cpp  Helper.h  Helper2.cpp  Helper2.h  MouseEvents.cpp  MouseEvents.h  RPN.cpp  RPN.h  main.cpp
dinosaurFirstIter/: Animation.cpp  Animation.h  Birds.cpp  Birds.h  CMakeLists.txt  Cactus.cpp  Cactus.h  Dinosaur.cpp  Dinosaur.h  Font.cpp  Font.h  PointSystem.cpp  PointSystem.h  Texture.cpp  Texture.h  fontsEnum.h  main.cpp  startScreen.cpp  startScreen.h  states.cpp  states.h  statesEnum.h  textureEnum.h
dinosaurGame/: Animation.cpp  Animation.h  CMakeLists.txt  Cactus.cpp  Cactus.h  Dinosaur.cpp  Dinosaur.h  Font.cpp  Font.h  Game.cpp  Game.h  GameOverScreen.cpp  GameOverScreen.h  Ground.cpp  Ground.h  StartScreen.cpp  StartScreen.h  Texture.cpp  Texture.h  duckingDino.cpp  duckingDino.h  fontsEnum.h  main.cpp  states.cpp  states.h  statesEnum.h  textureEnum.h
textInputProject/: Application.cpp  Application.h  Button.cpp  Button.h  CMakeLists.txt  Cursor.cpp  Cursor.h  Font.cpp  Font.h  Helper.cpp  Helper.h  ImageRotation.cpp  ImageRotation.h  Letter.cpp  Letter.h  Textbox.cpp  Textbox.h  Typing.cpp  Typing.h  TypingInput.cpp  TypingInput.h  fontsEnum.h
